2/11/25 - conatiner, footer, carousel issue fixes
- changed .container to .wrap-container to remove bootstrap conflict in about.html, booking.html

- added services.js to missing pages and #smartFooter to footer to fix the footer not appearing

- removed display: flex in .testimonial-carousel .carousel-item in bootstrap-custom.css to remove overlap error of carousel testimonials.

- added bottle_comb.png, bottle_comb_b.png as template images for services page (can be deleted or moved into a folder)

--- a/Happy Paw/css/about-booking.css
+++ b/Happy Paw/css/about-booking.css
@@ -55,6 +55,7 @@ h1 > .material-symbols-rounded {
         display: flex;
         flex-direction: column;
         width: 100%;
+        gap: 0rem !important;
     }
 
     .consent-flex {
@@ -91,6 +92,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;             /* space between elements in container*/
@@ -177,10 +179,11 @@ h2, h3 {
 
 /* paragraph defaults */
 p {
-    color: var(--p);
+    /* color: var(--p); */
     line-height: 2em;
     overflow-wrap: break-word;
     text-align: justify;
+    margin-bottom: auto;
 }
 
 /* main section h2 */
@@ -276,18 +279,19 @@ header {
 
 /* ======== FOOTER =========*/
  /* footer */
-footer {
+
+/* footer {
     bottom: 0;
     padding: 1rem;
-    text-align: center;                         /* centre footer text */
+    text-align: center;                         /* centre footer text 
     font-size: 0.8rem;
     color: var(--faint);
-}
+} */
 
 /* ======== MAIN/CENTRE PAGE CONTENT =========*/
 /* main section containing children */
 .main-section, .main-section-col {
-    margin: 15px auto; 
+    margin: 2rem auto; 
     width: 100%;                            /* horizontally center in page*/
     max-width: 900px;                           /* max width of main section */
     display: flex; 
